添加账户设置页面[

--- a/css/reset.css
+++ b/css/reset.css
@@ -125,3 +125,5 @@ body{overflow-y:scroll;}
 .bdb{border-bottom:1px solid #ddd;}
 
 .mbt9{margin-bottom:0.98rem;}
+
+.brt{border-top:1px solid #ddd;}
