--- a/css/my.css
+++ b/css/my.css
@@ -63,3 +63,16 @@
 .focus-on-color1{color:#666;}
 .focus-on-color2{color:#ff9511;}
 /* 全部关注 and 全部粉丝 end */
+/*账户认证 and 完善资料end start*/
+.authentication{background-color: #fff;border-top: 1px solid #ddd;border-bottom: 1px solid #ddd;margin-top: 1.3rem;}
+.authentication li{margin:0 0.25rem;height: 0.8rem;line-height: 0.8rem;border-bottom: 1px solid #ddd;}
+.authentication li p{float: left;color:#333;font-size: 0.28rem;width: 1.3rem;}
+.authentication li input{float:left;font-size: 0.2rem;line-height: 0.78rem;background-color: #fff;margin-left: 0.3rem;width: 4.5rem;}
+.authentication li span{float:right;color:#999;font-size: 0.28rem;}
+.authentication li span b{display: inline-block;width: 0.19rem;height: 0.29rem;background: url(../images/my/r-arrows.png) center center no-repeat;background-size: cover;margin-left: 0.2rem;vertical-align: -0.02rem;}
+.authentication li.last-li{border:none;}
+.address-msg{height: 1.8rem;padding:0.1rem 0.25rem;font-size: 0.28rem;color:#999;width: 100%;display: block;resize:none;}
+.next-button{color:#bbb;text-align: center;font-size: 0.3rem;background-color: #eee;border:none;border-radius: 3px;height: 0.8rem;line-height: 0.8rem;display: block;width: 7rem;margin:0 auto;}
+.authentication-button{margin-top: 0.85rem;}
+.info-perf-button{margin-top: 0.3rem;}
+/*账户认证 and 完善资料end*/
