--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 .Results_release{width: 100%;padding-bottom: 0.3rem;}
 
 .Results_release ul{padding:0 0.05rem;transition:all .1s;}
-.Results_release ul li{width: 32%;margin-right:0.14rem;float:left;border:1px solid #ddd;}
+.Results_release ul li{width: 32.02%;margin-right:0.14rem;float:left;border:1px solid #ddd;}
 .Results_release ul li:last-child{margin:0;}
 .Results_release ul li .Results_img{position:relative;width: 100%;height: 1.8rem;}
 .Results_monly{position:absolute;right:0;bottom:0.1rem;font-size:0.12rem;height:0.45rem;padding:0 0.12rem;line-height:0.45rem;background:#00B7E4;border-radius:0.35rem 0 0 0.35rem;}
@@ -56,7 +56,7 @@
 
 /* 优质项目 start */
 .title_name a{font-size:0.2rem;color:#999;margin-right:0.2rem;}
-.Quality_project ul li{width:2.47rem;float:left;padding-left:0.35rem;padding-right:0.35rem;padding-top:0.15rem;border-right:1px solid #ddd;border-bottom:1px solid #ddd;}
+.Quality_project ul li{width:33.3%;float:left;padding-left:0.35rem;padding-right:0.35rem;padding-top:0.15rem;border-right:1px solid #ddd;border-bottom:1px solid #ddd;}
 .Quality_project ul li .Quality_project_img{display:block;height: 1.17rem;}
 .Quality_project ul li h4{width: 100%;height: 0.35rem;overflow:hidden;font-size:0.2rem;margin:0.2rem 0;color:#333;}
 .Quality_project ul li .Quality_content{font-size:0.2rem;color:#999;margin-bottom:0.1rem;}
