--- a/css/reset.css
+++ b/css/reset.css
@@ -46,6 +46,8 @@ html,body{width: 100%;height: 100%;}
 html,body{overflow:hidden;}
 body{overflow-y:scroll;}
 
+input[type="submit"], input[type="reset"], input[type="button"], button { -webkit-appearance: none;}
+
 .ma{ margin: 0 auto;}
 .tc {
 	text-align: center;
