--- a/css/list.css
+++ b/css/list.css
@@ -94,9 +94,9 @@
 .article_content p{margin:0.12rem 0;color:#FF6501;height: 0.34rem;overflow:hidden;}
 .article_content .step{color:#666;margin-bottom:0.1rem;display:block;height: 0.34rem;overflow:hidden;}
 .state span{width: 30%;color:#999;height:0.37rem;overflow:hidden;}
-.state span i{display:inline-block;margin-right:0.05rem;vertical-align:middle;margin-top:-0.03rem;}
-.state span:first-child i{width: 0.33rem;height: 0.22rem;background:url(../images/lists/browse_icon.jpg)center center;background-size:cover;}
-.state span:nth-child(2) i{width: 0.25rem;height:0.22rem;background:url(../images/lists/answer_icon.jpg)center center;background-size:cover;}
+.state span i{display:inline-block;margin-right:0.05rem;vertical-align:middle;margin-top:0rem;}
+.state span:first-child i{width: 0.33rem;height: 0.22rem;background:url(../images/lists/browse_icon.jpg) center center;background-size:cover;}
+.state span:nth-child(2) i{width: 0.25rem;height:0.22rem;background:url(../images/lists/answer_icon.jpg) center center;background-size:cover;}
 .state span:last-child{width: 40%;}
 .state span b{color:#00B1E4;}
 
@@ -115,8 +115,8 @@
 
 .bk_college h3{padding:0 0.25rem;text-indent:0;border-bottom:1px solid #ddd;	}
 .bk_college_tab{padding:0.3rem 0.25rem;}
-.bk_college_tab ul{display:flex;display:-webkit-flex;flex-flow:row wrap;}
-.bk_college_tab ul li{width:23.8%;font-size:0.22rem;margin-right:0.111rem;}
+.bk_college_tab ul{display:none;}
+.bk_college_tab ul li{width:23.8%;font-size:0.22rem;float:left;margin-right:0.111rem;}
 .bk_college_tab ul li a{display:block;}
 .bk_college_tab ul li:nth-child(4n){margin:0;}
 .figure_head{height: 1.68rem;}
@@ -132,7 +132,6 @@
 .article_banner .pagination{height:auto;}
 .topic_btn{height: 0.8rem;width: 100%;}
 
-.wz_list{}
 .wz_list li{border-bottom:1px solid #ddd;}
 .wz_list li:last-child{border:none;}
 .wz_list h4{font-size:0.27rem;color:text-overflow:ellipsis;white-space:nowrap;overflow：hidden;}
@@ -140,10 +139,27 @@
 
 .activity{height:4.15rem;display:block;}
 .activity_img{width: 100%;height: 2.8rem;}
-.activity .swiper-slide{display:flex;display:-webkit-flex;flex-flow:row wrap;padding:0.25rem 0.3rem 0rem 0.3rem;}
-.activity .swiper-slide a{display:flex;display:-webkit-flex;flex-flow:row wrap;}
+.activity .swiper-slide{padding:0.25rem 0.3rem 0rem 0.3rem;}
 .activity .activity_name{font-size:0.25rem;width: 100%;text-align:center;margin-top:0.2rem;text-overflow:ellipsis;white-space:nowrap;overflow：hidden;}
-
 /* 邦客学院 end */
 
+/* 专家智库 start */
+.container{height: auto;}
+.list_screen_btn .expert_list_title{width: 100%;text-align:left;text-indent:0.65rem;}
+.view_mores{position:absolute;right:0.28rem;bottom:0.15rem;background:#fff;padding-left:0.41rem;}
+.view_mores span{display:inline-block;width: 0.25rem; height: 0.17rem;background:url(../images/lists/more_icon.png) center center no-repeat;background-size: 100% 100%;margin-left:0.05rem;transition:transform .3s;}
+.expert_szd ul{height: 1.52rem;position:relative;overflow:hidden;}
+
+.expert_list{padding:0.4rem 0 0 0;}
+.expert_think_tank{border-top:1px solid #ddd;}
+.expert_think_tank li{width: 33.3%;float:left;text-align:center;padding:0.2rem 0;font-size:0.2rem;box-sizing:border-box;border-bottom:1px solid #ddd;}
+.expert_think_tank li:nth-child(3n-1){border-left:1px solid #ddd;border-right:1px solid #ddd;}
+.expert_img{display:block;width: 1.2rem;height: 1.2rem;margin:0 auto;}
+.expert_name{color:#333;font-size:0.28rem;margin-top:0.2rem;}
+.expert_positiopn{color:#666;margin-bottom:0.2rem;}
+.expert_positiopn i{display:inline-block;width: 0.17rem;height: 0.22rem;background:url(../images/lists/expert_pos_icon.png) center center; background-size:100% 100%;vertical-align:middle;margin-top:-0.04rem;margin-right:0.05rem;}
+.expert_field{margin-bottom:0.1rem;}
+.advisory_expert input{padding:0.06rem 0.1rem;background:#00b1e3;color:#fff;font-size:0.2rem;border-radius:3px;}
+.advisory_expert input:first-child{margin-right:0.1rem;}
+/* 专家智库 end */
 
