--- a/css/details.css
+++ b/css/details.css
@@ -97,3 +97,6 @@
 .paper-comment h2{line-height: 0.6rem;color:#666;font-size: 0.28rem;padding-left: 0.3rem;border-bottom: 1px solid #ddd;}
 .paper-comment-txt1{padding:0.3rem;color:#999;font-size: 0.26rem;text-align: center;margin-top: 0.8rem;}
 /*文章详情-end*/
+/*专家介绍-start*/
+.expert-txt{line-height: 0.4rem;text-indent: 2em;}
+/*专家介绍-end*/
