--- a/css/list.css
+++ b/css/list.css
@@ -171,3 +171,20 @@
 .news_list li span{padding: 0;color:#999;margin-top:0.03rem;font-size:0.2rem;}
 .news_list .setting_item{font-size:0.22rem;}
 .news_list .setting_item b{display:inline-block;width: 75%;height:100%;text-overflow:ellipsis;white-space:nowrap;overflow:hidden;}
+/* 消息 end */
+
+/* 金融支持 start */
+.financial-support-list .screen_box span{width: 25%;}
+.financial-support-list .result_list_term h4{margin-bottom:0rem;width: 100%;height: 0.45rem;text-overflow:ellipsis;white-space:nowrap;overflow:hidden;}
+.financial-support-list .result_list_details,.financial-support-list .participate{margin:0;}
+.financial-support-list .participate span{border:none;color:#999;}
+.financial-support-list .contacts{margin:0.1rem 0;}
+
+.financial-support-list .result_list_region i{display:inline-block;width: 0.25rem;height: 0.25rem;background:url(../images/lists/yt_icon.jpg);background-size:100% 100%;vertical-align:middle;margin-top:-0.08rem;margin-right:0.05rem;}
+.financial-support-list .result_list_img{width: 1.7rem;height: 1.8rem;position:relative;}
+.financial-support-list .result_list_term{width: 5.3rem;}
+.financial-support-list .result_list_term h4 span{background: #00b1e3;border-radius:3px;}
+.financial-support-list .posi{width: 100%;position:absolute;left:0rem;bottom:0.05rem;}
+.financial-support-list .posi span{color:#fff;font-size:0.2rem;}
+.posi .l_posi i{width: 0.25rem;height: 0.3rem;display:inline-block;background:url(../images/lists/position_icon1.png);background-size:100% 100%;vertical-align:middle;margin:0 0.05rem;margin-top:-0.03rem;}
+/* 金融支持 end */
