--- a/css/list.css
+++ b/css/list.css
@@ -95,8 +95,8 @@
 .article_content .step{color:#666;margin-bottom:0.1rem;display:block;height: 0.34rem;overflow:hidden;}
 .state span{width: 30%;color:#999;height:0.37rem;overflow:hidden;}
 .state span i{display:inline-block;margin-right:0.05rem;vertical-align:middle;margin-top:0rem;}
-.state span:first-child i{width: 0.33rem;height: 0.22rem;background:url(../images/lists/browse_icon.jpg) center center;background-size:cover;}
-.state span:nth-child(2) i{width: 0.25rem;height:0.22rem;background:url(../images/lists/answer_icon.jpg) center center;background-size:cover;}
+.state span:first-child i{width: 0.3rem;height: 0.2rem;background:url(../images/lists/browse_icon.png) center center;background-size:cover;}
+.state span:nth-child(2) i{width: 0.25rem;height:0.22rem;background:url(../images/lists/answer_icon.png) center center;background-size:cover;}
 .state span:last-child{width: 40%;}
 .state span b{color:#00B1E4;}
 
