--- a/css/my.css
+++ b/css/my.css
@@ -233,17 +233,17 @@ header.bg-color3 .bankcard{
 	
 }
 .my_balance_ck{
-	padding:0.3rem 0.2rem;color:#000;font-size:0.36rem;
-	line-height:0.26rem;
+	height: 0.8rem;padding:0 0.2rem;color:#000;font-size:0.36rem;
+	line-height:0.8rem;
 }
 .my_balance_ck i{
-	width: 0.42rem;height: 0.24rem;
-	background:url(../images/my/ck_icon.png) center center no-repeat;
+	width: 0.42rem;height: 0.24rem;margin-top:0.28rem;
+	background:url(../images/my/ck_icon1.png) center center no-repeat;
 	background-size:cover;margin-left:0.2rem;display:inline-block;
 }
 .my_balance_wrap{
 	border:1px solid #ddd;border-left:none;border-right:none;
-	padding:0.1rem 0.2rem;display:flex;display:-webkit-flex;flex-flow:row nowrap;
+	padding:0.1rem 0.2rem;
 	align-items:center;
 }
 .my_balance_item{
@@ -298,13 +298,26 @@ header.bg-color3 .bankcard{
 	list-style-type: disc;
 }
 .jy_list li{
-	color:#999;font-size:0.28rem;background:url(../images/my/right_icon.png) center right 0.2rem no-repeat,#fff;
-	background-size: 0.18rem 0.3rem;padding:0.25rem 0.2rem;border-bottom:1px solid #ddd;
+	color:#999;font-size:0.28rem;background:#fff;
+	border-bottom:1px solid #ddd;height:0.8rem;overflow: hidden;
+	line-height:0.8rem;box-sizing: border-box;
 }
-.jy_list li span:last-child{
-	margin-right:0.4rem;
+.transaction_details{border-top:1px solid #ddd;}
+.transaction_details p{
+	padding:0 0.48rem;height:0.5rem;line-height:0.5rem;background:#fff;
 }
+.jy_name{
+	margin-left:0.2rem;
+}
+.jy_list li i.yjt_icon{
+background:url(../images/my/right_icon.png);margin-right:0.2rem;
+background-size:100% 100%;width: 0.18rem;height: 0.3rem;margin-top:0.25rem;
+transition: transform .3s;
+}
+
 .jy_list li span i{
 	font-weight:400;font-size:0.2rem;padding-right:0.2rem;
 }
 /* 我的 end */
+
+/* 交易记录 srtart */
